--- a/00_tensorflow_fundamentals.ipynb
+++ b/00_tensorflow_fundamentals.ipynb
@@ -490,6 +490,17 @@
           "execution_count": 50
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.expand_dims(tensor_A,axis=1)"
+      ],
+      "metadata": {
+        "id": "bbWqMP-a3OJs"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
